--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -75,6 +75,9 @@
 @layer base {
   * {
     @apply border-border;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0
   }
   body {
     @apply bg-background text-foreground;
