--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -31,7 +31,7 @@
     --chart-5: 27 87% 67%;
     --primary-1: #000000;
     --primary-2: #1182c5;
-    --secondary-blue: #377DFF;
+    --secondary-blue: #0c4ca3;
     --secondary-red: #FF5630;
     --secondary-green: #38CB89;
     --secondary-orange: #FFAB00;
